# wisielec_online_college_project

./: CMakeLists.txt
src/: client.cpp  game.cpp  game.h  game_passwords.cpp  main.cpp
